--- a/src/webapp/WEB-INF/pages/cars.html
+++ b/src/webapp/WEB-INF/pages/cars.html
@@ -14,9 +14,7 @@
         <th scope="col">speed</th>
     </tr>
     </thead>
-
-
-    <tr th:each="car : ${resultList}">
+    <tr th:each="car : ${car}">
         <td th:utext="${car.nameModel}">nameModel</td>
         <td th:utext="${car.color}">color</td>
         <td th:utext="${car.speed}">speed</td>
